# ScreenScribe

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  Makefile  README.md  USAGE.md  pyproject.toml  test_html_report_pro.py
.github/workflows/: loctree-ci.yml
cinescribe/: __init__.py  audio.py  cli.py  config.py  detect.py  report.py  screenshots.py  semantic.py  transcribe.py  vision.py
docs/: AGENT_GUIDE.md  QUICK_START.md
screenscribe/: __init__.py  analyze_server.py  api_utils.py  audio.py  bootstrap.py  checkpoint.py  cli.py  codebase.py  config.py  default_keywords.yaml  detect.py  html_template.py  html_template_pro.py  keywords.py  preprocess.py  prompts.py  report.py  screenshots.py  semantic.py  semantic_filter.py  text_similarity.py  transcribe.py  unified_analysis.py  validation.py  vision.py  vtt_generator.py
screenscribe/html_pro/: __init__.py  assets.py  data.py  renderer.py
screenscribe/html_pro_assets/scripts/: review_app.js  video_player.js
screenscribe/html_pro_assets/styles/: quantum_vista.css
screenscribe/html_pro_assets/templates/: report.html
tests/: __init__.py  test_config_env.py  test_detect.py  test_integration.py  test_preprocess.py  test_prompts.py  test_report_artifacts.py  test_semantic_filter.py  test_summary_fallbacks.py  test_todo_export.py  test_unified_analysis.py  test_unified_analysis_streaming.py  test_validation.py
