[project]
name = "screenscribe"
version = "0.1.2"
description = "Video review automation - extract bugs and changes from screencast commentary"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Maciej Gad", email = "void@div0.space" },
    { name = "Monika Gad", email = "monika@libraxis.cloud" },
]
dependencies = [
    "black==25.12.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
screenscribe = "screenscribe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit[toml]>=1.7.0",
    "types-pyyaml>=6.0.0",
    "detect-secrets>=1.5.0",
]

# Ruff - replaces black, isort, flake8, bandit
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "RUF",   # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert used (ok in tests)
    "S603",  # subprocess without shell=True is SAFE (we use ffmpeg)
    "RUF013",  # implicit Optional - typer uses this pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# MyPy - type checking
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "integration: marks tests that require external API access (LIBRAXIS_API_KEY)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Bandit - security linter
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B311", "B404", "B603"]  # assert, random, subprocess import, subprocess call
